@@ -1,8 +1,0 @@
-Standard="S2Dao_Standard"
-mysql="S2Dao_MySQL"
-pgsql="S2Dao_PostgreSQL"
-sqlite="S2Dao_SQLite"
-firebird="S2Dao_Firebird"
-oci="S2Dao_Oracle"
-dblib="S2Dao_Sybase"
-odbc="S2Dao_DB2"
