@@ -29,7 +29,7 @@ class S2Dao_ProcedureMetaDataFactory {
     const ProcedureMetaData_Suffix = 'ProcedureMetaDataImpl';
     
     public static function createProcedureMetaData(PDO $connection){
-        $dbms = S2Dao_DbmsManager::getDbms($connection);
+        $dbms = S2DaoDbmsManager::getDbms($connection);
         $pmd = get_class($dbms) . self::ProcedureMetaData_Suffix;
         
         if(!class_exists($pmd)){
